--- a/index.html
+++ b/index.html
@@ -4,13 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Bienvenue sur mon portfolio</h1>
-    <p>Explorez mes projets et mon CV ci-dessous :</p>
-    <ul>
-        <li><a href="./CV DS_foot.pdf.pdf" target="_blank">Mon CV</a></li>
-        <li><a href="./projets/projet1/README.md" target="_blank">Projet 1</a></li>
-    </ul>
+    <header>
+        <h1>Votre Nom</h1>
+        <nav>
+            <a href="#about">À propos</a>
+            <a href="#projects">Projets</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
+    <main>
+        <section id="about">
+            <h2>À propos</h2>
+            <p>Présentez-vous ici.</p>
+        </section>
+        <section id="projects">
+            <h2>Projets</h2>
+            <p>Listez vos projets ici.</p>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Ajoutez vos liens ou formulaire ici.</p>
+        </section>
+    </main>
+    <footer>
+        <p>© 2024 Votre Nom</p>
+    </footer>
 </body>
 </html>
+
