Changements html et css

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Portfolio - Ethan Lavogez</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Votre Nom</h1>
+        <h1>Ethan Lavogez</h1>
         <nav>
             <a href="#about">À propos</a>
             <a href="#projects">Projets</a>
@@ -18,7 +18,15 @@
     <main>
         <section id="about">
             <h2>À propos</h2>
-            <p>Présentez-vous ici.</p>
+            <p>
+                Bonjour et bienvenue sur mon portfolio ! Je m'appelle <strong>Ethan Lavogez</strong>, étudiant en Master Data Science, avec une formation initiale en Sciences pour la Santé. Je suis passionné par l'analyse de données et les technologies, et je souhaite appliquer mes compétences pour résoudre des problèmes complexes dans des domaines tels que la santé et le football, ma passion de toujours.
+            </p>
+            <p>
+                Mon objectif est de combiner ma passion pour les données avec mon amour du football. J'aspire à travailler dans le domaine de la Data Science appliquée au sport, en aidant les clubs et les organisations à améliorer leurs performances grâce à l'analyse de données.
+            </p>
+            <p>
+                En dehors des données, j'aime me plonger dans les stratégies sportives, suivre les championnats de football, et explorer de nouvelles technologies pour enrichir mes compétences.
+            </p>
         </section>
         <section id="projects">
             <h2>Projets</h2>
