--- a/index.html
+++ b/index.html
@@ -8,16 +8,25 @@
 </head>
 <body>
     <header>
-        <h1>Ethan Lavogez</h1>
+        <div class="container">
+            <h1>Ethan Lavogez</h1>
+            <p>Student in Healthcare Data Science</p>
+            <a href="#about" class="btn">Learn More</a>
+        </div>    
         <nav>
-            <a href="#about">À propos</a>
-            <a href="#projects">Projets</a>
-            <a href="#contact">Contact</a>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
         </nav>
     </header>
+
     <main>
         <section id="about">
-            <h2>À propos</h2>
+            <h2>About Me</h2>
             <p>
                 Bonjour et bienvenue sur mon portfolio ! Je m'appelle <strong>Ethan Lavogez</strong>, étudiant en Master Data Science, avec une formation initiale en Sciences pour la Santé. Je suis passionné par l'analyse de données et les technologies, et je souhaite appliquer mes compétences pour résoudre des problèmes complexes dans des domaines tels que la santé et le football, ma passion de toujours.
             </p>
@@ -28,17 +37,28 @@
                 En dehors des données, j'aime me plonger dans les stratégies sportives, suivre les championnats de football, et explorer de nouvelles technologies pour enrichir mes compétences.
             </p>
         </section>
-        <section id="projects">
-            <h2>Projets</h2>
-            <p>Listez vos projets ici.</p>
+
+        <section id="skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>Programming: Python, R, SQL</li>
+                <li>Data Analysis: Cleaning, Visualization, Modeling</li>
+                <li>Tools: Git, Power BI, Tableau</li>
+            </ul>
         </section>
+
+        <section id="experience">
+            <h2>Experiences</h2>
+            <p>Details about internships, projects, or jobs...</p>
+        </section>
+
         <section id="contact">
             <h2>Contact</h2>
-            <p>Ajoutez vos liens ou formulaire ici.</p>
+            <p>Email: ethan.lavogez.etu@univ-lille.fr</p>
         </section>
     </main>
     <footer>
-        <p>© 2024 Votre Nom</p>
+        <p>© 2024 Ethan Lavogez</p>
     </footer>
 </body>
 </html>
