--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Ethan Lavogez</h1>
-            <p>Student in Healthcare Data Science</p>
-            <a href="#about" class="btn">Learn More</a>
-        </div>    
+        <div class="intro-container">
+            <div class="photo-container">
+                <img src="assets/photo.jpg" alt="Photo de profil">
+            </div>
+            <div class="text-container">    
+                <h1>Ethan Lavogez</h1>
+                <p>Student in Healthcare Data Science</p>
+                <a href="#about" class="btn">Learn More</a>
+            </div>
+        </div>        
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
