--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <p>Email: ethan.lavogez.etu@univ-lille.fr</p>
     </section>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
 
