--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Ethan Lavogez</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    <!--Nagigation Menu-->
+    <!-- Navigation Menu -->
     <header>
         <nav>
             <ul>
@@ -19,8 +20,8 @@
             </ul>
         </nav>
     </header>
-    
-    <!--Static Homepage-->
+
+    <!-- Home Section -->
     <section id="home" class="active">
         <div class="intro-container">
             <div class="text-container">
@@ -29,12 +30,12 @@
                 <p>Student in Healthcare Data Science</p>
             </div>
             <div class="image-content">
-                <img src="assets/photo.jpg" alt="Photo de profil">
+                <img src="path_to_your_photo.jpg" alt="Photo de profil">
             </div>
         </div>
-    </section>        
+    </section>
 
-    <!--About Section-->
+    <!-- About Section -->
     <section id="about">
         <h2>About Me</h2>
         <p>
@@ -48,6 +49,7 @@
         </p>
     </section>
 
+    <!-- Skills Section -->
     <section id="skills">
         <h2>Skills</h2>
         <ul>
@@ -57,17 +59,16 @@
         </ul>
     </section>
 
+    <!-- Experience Section -->
     <section id="experience">
-        <h2>Experiences</h2>
+        <h2>Experience</h2>
         <p>Details about internships, projects, or jobs...</p>
     </section>
 
+    <!-- Contact Section -->
     <section id="contact">
         <h2>Contact</h2>
         <p>Email: ethan.lavogez.etu@univ-lille.fr</p>
     </section>
-
-    <script src="script.js" defer></script>
 </body>
 </html>
-
