--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p>Student in Healthcare Data Science</p>
             </div>
             <div class="image-content">
-                <img src="path_to_your_photo.jpg" alt="Photo de profil">
+                <img src="assets/photo.jpg" alt="Photo de profil">
             </div>
         </div>
     </section>
