--- a/index.html
+++ b/index.html
@@ -39,9 +39,20 @@
     <div class="tab-content container mt-4">
         <!-- Home Section -->
         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-            <h2>Welcome to My Portfolio</h2>
-            <p>This is the home section where you can find a brief introduction.</p>
+            <div class="row align-items-center min-vh-50">
+                <!--Left Section-->
+                <div class="col-md-6 text-left">
+                <h2 class="display-5">Welcome to My Portfolio</h2>
+                <p class="lead">I am Ethan Lavogez, a student in Healthcare Data Science.</p>
+                <p>Passionate about turning healthcare data into actionable insights.</p>
+            </div>
+
+            <!-- Right Section -->
+            <div class="col-md-6 text-center">
+                <img src="assets/image_mario.png" alt="Ethan Lavogez" class="profile-img">
+            </div>
         </div>
+    </div>
 
         <!-- About Section -->
         <div class="tab-pane fade" id="about" role="tabpanel" aria-labelledby="about-tab">
