--- a/index.html
+++ b/index.html
@@ -17,19 +17,22 @@
             <nav>
                 <ul class="nav nav-tabs justify-content-end" id="portfolioTabs" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" id="home-tab" data-bs-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Home</a>
+                        <a class="nav-link active" id="Home-tab" data-bs-toggle="tab" href="#Home" role="tab" aria-controls="Home" aria-selected="true">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="about-tab" data-bs-toggle="tab" href="#about" role="tab" aria-controls="about" aria-selected="false">About Me</a>
+                        <a class="nav-link" id="about-tab" data-bs-toggle="tab" href="#about" role="tab" aria-controls="about" aria-selected="false">A propos de moi</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="skills-tab" data-bs-toggle="tab" href="#skills" role="tab" aria-controls="skills" aria-selected="false">Skills</a>
+                        <a class="nav-link" id="Compétences-tab" data-bs-toggle="tab" href="#Compétences" role="tab" aria-controls="Compétences" aria-selected="false">Compétences</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="experience-tab" data-bs-toggle="tab" href="#experience" role="tab" aria-controls="experience" aria-selected="false">Experience</a>
+                        <a class="nav-link" id="Experiences-tab" data-bs-toggle="tab" href="#Experiences" role="tab" aria-controls="Experiences" aria-selected="false">Experiences</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Contact</a>
+                        <a class="nav-link" id="Contact-tab" data-bs-toggle="tab" href="#Contact" role="tab" aria-controls="Contact" aria-selected="false">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="Formation-tab" data-bs-toggle="tab" href="#Formation" role="tab" aria-controls="Formation" aria-selected="false">Formation</a>    
                     </li>
                 </ul>
             </nav>
@@ -38,13 +41,13 @@
 
     <div class="tab-content container mt-4">
         <!-- Home Section -->
-        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+        <div class="tab-pane fade show active" id="Home" role="tabpanel" aria-labelledby="Home-tab">
             <div class="row align-items-center min-vh-50">
                 <!--Left Section-->
                 <div class="col-md-6 text-left">
                 <h2 class="display-5">Welcome to My Portfolio</h2>
-                <p class="lead">I am Ethan Lavogez, a student in Healthcare Data Science.</p>
-                <p>Passionate about turning healthcare data into actionable insights.</p>
+                <p class="lead">Je m'appelle Ethan Lavogez et je suis étudiant en Data Science en santé.</p>
+                <p>Passionné par la transformation des données de santé en informations exploitables.</p>
             </div>
 
             <!-- Right Section -->
@@ -56,13 +59,13 @@
 
         <!-- About Section -->
         <div class="tab-pane fade" id="about" role="tabpanel" aria-labelledby="about-tab">
-            <h2>About Me</h2>
+            <h2>A propos de moi</h2>
             <p>I am Ethan Lavogez, a passionate student in Healthcare Data Science...</p>
         </div>
 
-        <!-- Skills Section -->
-        <div class="tab-pane fade" id="skills" role="tabpanel" aria-labelledby="skills-tab">
-            <h2>Skills</h2>
+        <!-- Compétences Section -->
+        <div class="tab-pane fade" id="Compétences" role="tabpanel" aria-labelledby="Compétences-tab">
+            <h2>Compétences</h2>
             <ul>
                 <li>Programming: Python, R, SQL</li>
                 <li>Data Analysis: Cleaning, Visualization, Modeling</li>
@@ -71,17 +74,22 @@
             </ul>
         </div>
 
-        <!-- Experience Section -->
-        <div class="tab-pane fade" id="experience" role="tabpanel" aria-labelledby="experience-tab">
-            <h2>Experience</h2>
-            <p>Details about my professional experiences...</p>
+        <!-- Experiences Section -->
+        <div class="tab-pane fade" id="Experiences" role="tabpanel" aria-labelledby="Experiences-tab">
+            <h2>Experiences</h2>
+            <p>Details about my professional Experiences...</p>
         </div>
 
         <!-- Contact Section -->
-        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+        <div class="tab-pane fade" id="Contact" role="tabpanel" aria-labelledby="Contact-tab">
             <h2>Contact</h2>
             <p>Email: ethan.lavogez.etu@univ-lille.fr</p>
             <p>LinkedIn: <a href="www.linkedin.com/in/ethan-lavogez-b85a59291">My LinkedIn</a></p>
+        </div>
+
+        <!--Formation Section-->
+        <div class="tab-pane fade" id="Formation" role="tabpanel" aria-labelledby="Formation-tab">
+            <h2>Formation</h2>
         </div>
     </div>
 
