--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
 
         <!-- About Section -->
         <div class="tab-pane fade" id="about" role="tabpanel" aria-labelledby="about-tab">
-            <h2>A propos de moi</h2>
-            <p>I am Ethan Lavogez, a passionate student in Healthcare Data Science...</p>
+            <div class="about-header">
+                <h2 class="about-title">About<br>Me</h2>
+            </div>
+            <p>Je suis Ethan Lavogez, un étudiant passionné par la science des données...</p>
         </div>
 
         <!-- Compétences Section -->
