--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a class="nav-link" id="about-tab" data-bs-toggle="tab" href="#about" role="tab" aria-controls="about" aria-selected="false">A propos de moi</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="Compétences-tab" data-bs-toggle="tab" href="#Compétences" role="tab" aria-controls="Compétences" aria-selected="false">Compétences</a>
+                        <a class="nav-link" id="Skills-tab" data-bs-toggle="tab" href="#Skills" role="tab" aria-controls="Skills" aria-selected="false">Compétences</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="Experiences-tab" data-bs-toggle="tab" href="#Experiences" role="tab" aria-controls="Experiences" aria-selected="false">Experiences</a>
@@ -66,14 +66,16 @@
         </div>
 
         <!-- Compétences Section -->
-        <div class="tab-pane fade" id="Compétences" role="tabpanel" aria-labelledby="Compétences-tab">
-            <h2>Compétences</h2>
-            <ul>
-                <li>Programming: Python, R, SQL</li>
-                <li>Data Analysis: Cleaning, Visualization, Modeling</li>
-                <li>Tools: Git, Power BI, Tableau</li>
-                <li>Project Management: Agile, Collaborative Work</li>
-            </ul>
+        <div class="tab-pane fade" id="skills" role="tabpanel" aria-labelledby="skills-tab">
+            <div class="skills-container">
+                <h2 class="skills-title">Skills</h2>
+                <div class="skills-bubbles">
+                    <span class="bubble">Programming: Python, R, SQL</span>
+                    <span class="bubble">Data Analysis: Cleaning, Visualization, Modeling</span>
+                    <span class="bubble">Tools: Git, Power BI, Tableau</span>
+                    <span class="bubble">Project Management: Agile, Collaborative Work</span>
+                </div>
+            </div>
         </div>
 
         <!-- Experiences Section -->
