--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
         </div>
 
         <!-- Compétences Section -->
-        <div class="tab-pane fade" id="skills" role="tabpanel" aria-labelledby="skills-tab">
-            <div class="skills-container">
-                <h2 class="skills-title">Skills</h2>
-                <div class="skills-bubbles">
+        <div class="tab-pane fade" id="Skills" role="tabpanel" aria-labelledby="Skills-tab">
+            <div class="Skills-container text-center">
+                <h1 class="Skills-title">Skills</h1>
+                <div class="Skills-bubbles">
                     <span class="bubble">Programming: Python, R, SQL</span>
                     <span class="bubble">Data Analysis: Cleaning, Visualization, Modeling</span>
                     <span class="bubble">Tools: Git, Power BI, Tableau</span>
