--- a/index.html
+++ b/index.html
@@ -66,17 +66,15 @@
         </div>
 
         <!-- Compétences Section -->
-        <div class="tab-pane fade show active" id="Skills" role="tabpanel" aria-labelledby="Skills-tab">
-            <div class="Skills-container">
-                <h1 class="Skills-title">Skills</h1>
-                <div class="Skills-grid">
-                    <span class="bubble">Programming: Python, R, SQL</span>
-                    <span class="bubble">Data Analysis: Cleaning, Visualization, Modeling</span>
-                    <span class="bubble">Tools: Git, Power BI, Tableau</span>
-                    <span class="bubble">Project Management: Agile, Collaborative Work</span>
-                </div>
+        <div class="skills-container">
+            <h1 class="skills-title">Skills</h1>
+            <div class="skills-grid">
+                <div class="bubble">Programming: Python, R, SQL</div>
+                <div class="bubble">Data Analysis: Cleaning, Visualization, Modeling</div>
+                <div class="bubble">Tools: Git, Power BI, Tableau</div>
+                <div class="bubble">Project Management: Agile, Collaborative Work</div>
             </div>
-        </div>
+        </div>        
 
         <!-- Experiences Section -->
         <div class="tab-pane fade" id="Experiences" role="tabpanel" aria-labelledby="Experiences-tab">
