--- a/index.html
+++ b/index.html
@@ -67,14 +67,12 @@
 
         <!-- Compétences Section -->
         <div class="skills-container">
-            <h1 class="skills-title">Skills</h1>
-            <div class="skills-grid">
-                <div class="bubble">Programming: Python, R, SQL</div>
-                <div class="bubble">Data Analysis: Cleaning, Visualization, Modeling</div>
-                <div class="bubble">Tools: Git, Power BI, Tableau</div>
-                <div class="bubble">Project Management: Agile, Collaborative Work</div>
-            </div>
-        </div>        
+            <div class="skills-title">Skills</div>
+            <div class="bubble">Programming: Python, R, SQL</div>
+            <div class="bubble">Data Analysis: Cleaning, Visualization, Modeling</div>
+            <div class="bubble">Tools: Git, Power BI, Tableau</div>
+            <div class="bubble">Project Management: Agile, Collaborative Work</div>
+        </div>      
 
         <!-- Experiences Section -->
         <div class="tab-pane fade" id="Experiences" role="tabpanel" aria-labelledby="Experiences-tab">
