--- a/index.html
+++ b/index.html
@@ -66,13 +66,18 @@
         </div>
 
         <!-- Compétences Section -->
-        <div class="skills-container">
-            <div class="skills-title">Skills</div>
-            <div class="bubble">Programming: Python, R, SQL</div>
-            <div class="bubble">Data Analysis: Cleaning, Visualization, Modeling</div>
-            <div class="bubble">Tools: Git, Power BI, Tableau</div>
-            <div class="bubble">Project Management: Agile, Collaborative Work</div>
-        </div>      
+        <div class="tab-pane fade" id="Skills" role="tabpanel" aria-labelledby="Skills-tab">
+            <div class="Skills-container text-center">
+                <h1 class="Skills-title">Skills</h1>
+                <div class="Skills-bubbles">
+                    <span class="bubble">Programming: Python, R, SQL</span>
+                    <span class="bubble">Data Analysis: Cleaning, Visualization, Modeling</span>
+                    <span class="bubble">Tools: Git, Power BI, Tableau</span>
+                    <span class="bubble">Project Management: Agile, Collaborative Work</span>
+                </div>
+            </div>
+        </div>
+            
 
         <!-- Experiences Section -->
         <div class="tab-pane fade" id="Experiences" role="tabpanel" aria-labelledby="Experiences-tab">
