--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <!-- Compétences Section -->
         <div class="tab-pane fade" id="Skills" role="tabpanel" aria-labelledby="Skills-tab">
-            <div class="Skills-container text-center">
+            <div class="Skills-container">
                 <h1 class="Skills-title">Skills</h1>
                 <div class="Skills-bubbles">
                     <span class="bubble">Programming: Python, R, SQL</span>
