--- a/index.html
+++ b/index.html
@@ -120,7 +120,41 @@
                         </div>
                     </div>
         
-                    <!-- Ajoutez d'autres expériences ici -->
+                    <!-- Expérience 3 -->
+                     <div class="timeline-item">
+                        <div class="circle">3</div>
+                        <div class="timeline-content">
+                            <img src="assets/Saint_Phi.png" alt="Saint Phi Logo" class="experience-logo">
+                            <h3>Ingénieur biomédical - Saint Phi</h3>
+                            <p><strong>Lieu :</strong> Saint Phi, Laboratoire de Recherche</p>
+                            <p><strong>Durée :</strong> Septembre 2021 - Décembre</p>
+                            <p><strong>Missions :</strong></p>
+                            <ul>
+                                <li>Conception et développement de prototypes biomédicaux.</li>
+                                <li>Conception et développement de prototypes biomédicaux.</li>
+                            </ul>
+                            <p><strong>Objectif :</strong> Appliquer des principes d'innovation.</p>
+                            <p><strong>Ce que j'ai appris :</strong> Conception, développement.</p>
+                        </div>
+                     </div>
+
+                     <!--Expérience 4-->
+                     <div class="timeline-item">
+                        <div class="circle">4</div>
+                        <div class="timeline-content">
+                            <img src="assets/cerim.png" alt="cerim logo" class="experience-logo">
+                            <h3>Data Scientist - Cerim</h3>
+                            <p><strong>Lieu :</strong> Cerim, Laboratoire de Recherche</p>
+                            <p><strong>Durée :</strong> Janvier 2022 - Mars 202</p>
+                            <p><strong>Missions :</strong></p>
+                            <ul>
+                                <li>Conception et développement de prototypes biomédicaux.</li>
+                                <li>Conception et développement de prototypes biomédicaux.</li>
+                            </ul>
+                            <p><strong>Objectif :</strong> Appliquer des principes d'innovation.</p>
+                            <p><strong>Ce que j'ai appris :</strong> Conception, développement.</p>
+                        </div>
+                     </div>
                 </div>
             </div>
         </div>
