--- a/index.html
+++ b/index.html
@@ -161,7 +161,59 @@
 
          <!--Formation Section-->
          <div class="tab-pane fade" id="Formation" role="tabpanel" aria-labelledby="Formation-tab">
-            <h2>Formation</h2>
+            <div class="formation-section">
+                <h1 class="formation-title">Formation</h1>
+                <div class="timeline">
+                    <!-- Formation 1 -->
+                    <div class="timeline-item">
+                        <div class="circle">1</div>
+                        <div class="timeline-content">
+                            <img src="univ_lille_logo.png" alt="Université de Lille Logo" class="formation-logo">
+                            <h3>Master Data Science en Santé</h3>
+                            <p><strong>Institution :</strong> Université de Lille</p>
+                            <p><strong>Dates :</strong> 2023 - 2025</p>
+                            <p><strong>Détails :</strong></p>
+                            <ul>
+                                <li>Apprentissage des statistiques avancées et modélisation.</li>
+                                <li>Techniques d’apprentissage automatique et deep learning.</li>
+                                <li>Développement de projets en recherche clinique et santé publique.</li>
+                            </ul>
+                        </div>
+                    </div>
+        
+                    <!-- Formation 2 -->
+                    <div class="timeline-item">
+                        <div class="circle">2</div>
+                        <div class="timeline-content">
+                            <img src="univ_lille_logo.png" alt="Université de Lille Logo" class="formation-logo">
+                            <h3>Licence Sciences pour la Santé</h3>
+                            <p><strong>Institution :</strong> Université de Lille</p>
+                            <p><strong>Dates :</strong> 2020 - 2023</p>
+                            <p><strong>Détails :</strong></p>
+                            <ul>
+                                <li>Initiation à la biologie, statistiques et informatique.</li>
+                                <li>Introduction à l’analyse des données de santé.</li>
+                            </ul>
+                        </div>
+                    </div>
+        
+                    <!-- Formation 3 -->
+                    <div class="timeline-item">
+                        <div class="circle">3</div>
+                        <div class="timeline-content">
+                            <img src="lycee_logo.png" alt="Lycée Logo" class="formation-logo">
+                            <h3>Baccalauréat Scientifique</h3>
+                            <p><strong>Institution :</strong> Lycée XYZ</p>
+                            <p><strong>Dates :</strong> 2017 - 2020</p>
+                            <p><strong>Détails :</strong></p>
+                            <ul>
+                                <li>Spécialité mathématiques et sciences physiques.</li>
+                                <li>Premiers projets en raisonnement scientifique.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Contact Section -->
