--- a/index.html
+++ b/index.html
@@ -165,18 +165,25 @@
                 <h1>Formation</h1>
             </div>
             <div class="formation-timeline">
-                <!-- Carte 1 -->
+                <!--Carte 1-->
                 <div class="formation-card">
-                    <img src="assets/univ.png" alt="Université Logo" class="formation-logo">
-                    <h3>Licence en Sciences pour la Santé</h3>
-                    <p>Université de Lille (2017 - 2020)</p>
-                    <p>Description succincte de ce que vous avez appris ou réalisé.</p>
+                    <img src="assets/lycee.jpg" alt="lycee" class="formation-logo">
+                    <h3>Baccalauréat Scientifique - option Mathématiques</h3>
+                    <p>Lycée Léo Lagrange (2017 - 2021)</p>
+                    <p><strong>Compétences :</strong></p>
                 </div>
                 <!-- Carte 2 -->
                 <div class="formation-card">
+                    <img src="assets/univ.png" alt="Université Logo" class="formation-logo">
+                    <h3>Licence en Sciences pour la Santé</h3>
+                    <p>Université de Lille - ILIS (2021 - 2024)</p>
+                    <p>Description succincte de ce que vous avez appris ou réalisé.</p>
+                </div>
+                <!-- Carte 3 -->
+                <div class="formation-card">
                     <img src="assets/univ.png" alt="Master Logo" class="formation-logo">
                     <h3>Master en Data Science en Santé</h3>
-                    <p>Université de Lille (2021 - 2024)</p>
+                    <p>Université de Lille - ILIS (2024 - )</p>
                     <p>Description succincte de ce que vous avez appris ou réalisé.</p>
                 </div>
                 <!-- Ajouter d'autres cartes ici -->
