--- a/index.html
+++ b/index.html
@@ -192,10 +192,33 @@
 
         <!-- Contact Section -->
         <div class="tab-pane fade" id="Contact" role="tabpanel" aria-labelledby="Contact-tab">
-            <h2>Contact</h2>
-            <p>Email: ethan.lavogez.etu@univ-lille.fr</p>
-            <p>LinkedIn: <a href="www.linkedin.com/in/ethan-lavogez-b85a59291">My LinkedIn</a></p>
-        </div>
+            <div class="contact-title">
+                <h1>Contactez-moi</h1>
+            </div>
+            <div class="contact-cards">
+                <!-- Carte Email -->
+                <div class="contact-card">
+                    <a href="mailto:ethan.lavogez.etu@univ-lille.fr" target="_blank">
+                        <img src="path-to-email-icon.png" alt="Email Icon" class="contact-icon">
+                        <p>Envoyez-moi un email</p>
+                    </a>
+                </div>
+                <!-- Carte LinkedIn -->
+                <div class="contact-card">
+                    <a href="https://www.linkedin.com/in/ethan-lavogez-b85a59291/" target="_blank">
+                        <img src="path-to-linkedin-icon.png" alt="LinkedIn Icon" class="contact-icon">
+                        <p>Connectez-vous sur LinkedIn</p>
+                    </a>
+                </div>
+                <!-- Carte GitHub -->
+                <div class="contact-card">
+                    <a href="https://github.com/ethanlavogez" target="_blank">
+                        <img src="path-to-github-icon.png" alt="GitHub Icon" class="contact-icon">
+                        <p>Explorez mon GitHub</p>
+                    </a>
+                </div>
+            </div>
+        </div>        
     </div>
 
     <footer class="bg-light text-center p-3 mt-5">
