--- a/index.html
+++ b/index.html
@@ -199,21 +199,21 @@
                 <!-- Carte Email -->
                 <div class="contact-card">
                     <a href="mailto:ethan.lavogez.etu@univ-lille.fr" target="_blank">
-                        <img src="path-to-email-icon.png" alt="Email Icon" class="contact-icon">
+                        <img src="assets/mail.avif" alt="Email Icon" class="contact-icon">
                         <p>Envoyez-moi un email</p>
                     </a>
                 </div>
                 <!-- Carte LinkedIn -->
                 <div class="contact-card">
                     <a href="https://www.linkedin.com/in/ethan-lavogez-b85a59291/" target="_blank">
-                        <img src="path-to-linkedin-icon.png" alt="LinkedIn Icon" class="contact-icon">
+                        <img src="assets/linkedin.png" alt="LinkedIn Icon" class="contact-icon">
                         <p>Connectez-vous sur LinkedIn</p>
                     </a>
                 </div>
                 <!-- Carte GitHub -->
                 <div class="contact-card">
                     <a href="https://github.com/ethanlavogez" target="_blank">
-                        <img src="path-to-github-icon.png" alt="GitHub Icon" class="contact-icon">
+                        <img src="assets/github.png" alt="GitHub Icon" class="contact-icon">
                         <p>Explorez mon GitHub</p>
                     </a>
                 </div>
