--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio - Ethan Lavogez</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <header class="bg-light p-3">
@@ -14,6 +15,12 @@
                 <h1 class="m-0">Ethan Lavogez</h1>
                 <p class="m-0">Student in Healthcare Data Science</p>
             </div>
+            <div class="theme-toggle">
+                <span class="icon-light"><i class="fas fa-sun"></i></span>
+                <span class="icon-dark"><i class="fas fa-moon"></i></span>
+            </div>
+        </div>
+    </header>
             <nav>
                 <ul class="nav nav-tabs justify-content-end" id="portfolioTabs" role="tablist">
                     <li class="nav-item">
@@ -226,6 +233,22 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        const themeToggle = document.querySelector('.theme-toggle');
+        const body = document.body;
+
+        // Charger le thème depuis le localStorage
+        const savedTheme = localStorage.getItem('theme');
+        if (savedTheme) {
+            body.classList.toggle('dark-mode', savedTheme === 'dark');
+        }
+
+        // Basculer entre clair et sombre
+        themeToggle.addEventListener('click', () => {
+            const isDarkMode = body.classList.toggle('dark-mode');
+            localStorage.setItem('theme', isDarkMode ? 'dark' : 'light');
+        });
+    </script>
 </body>
 </html>
 
